# NCD.L1.sample--nearly-neighbors

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  asconfig.json  package.json
simulation/: Cargo.toml
simulation/src/: lib.rs  proposal.rs
src/: utils.ts
src/factory/assembly/: index.ts
src/project/__tests__/: index.unit.spec.ts
src/project/assembly/: index.ts
src/proposal/__tests__/: index.unit.spec.ts
src/proposal/assembly/: index.ts
