[package]
name = "simulation-nearly-neighbors"
version = "0.1.0"
authors = ["NEAR Inc <hello@near.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag = "2.2.0" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", tag = "2.2.0"}
